# naacp-report

./: .impeccable.md  README.md  SKILL.md  justfile
.github/workflows/: deploy.yml  security.yml
.pi/skills/boe-cli/: SKILL.md
docs/research/: README.md  ga-county-list-and-gis-sources.md
docs/superpowers/plans/: 2026-07-17-astro-pivot.md  2026-07-17-report-data-pipeline-react-spa.md
generator/: pyproject.toml
generator/builders/: county_boards.py  demographics.py  turnout.py
generator/content/county-boards/: bibb.md  chatham.md  cherokee.md  cobb.md  dekalb.md  gwinnett.md  lowndes.md  muscogee.md
generator/tests/: test_county_boards.py  test_stub_builders.py
web/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json
web/src/: App.tsx
web/src/components/: CountiesList.astro
web/src/layouts/: Layout.astro
web/src/lib/: api.ts  data.ts  url.ts
web/src/pages/: 404.astro  demographics.astro  index.astro  turnout.astro
web/src/pages/counties/: [slug].astro  index.astro
web/src/routes/: CountyDetail.tsx  Placeholder.tsx
web/src/styles/: global.css
web/src/tests/: data.test.ts
web/src/tests/fixtures/data/: counties.json
web/src/tests/fixtures/data/counties/: testville.json
